syntax = "proto3";

import "google/protobuf/wrappers.proto";
import "avenue/financial/protobuf/core/core_messages_description.proto";
import "avenue/financial/protobuf/customer/customer_messages_description.proto";
import "avenue/financial/protobuf/paymentterm/paymentterm_messages_description.proto";
import "avenue/financial/protobuf/product/product_messages_description.proto";
import "avenue/financial/protobuf/salestax/salestax_messages_description.proto";

option java_multiple_files = true;
option java_package = "com.avenue.financial.services.grpc.proto.recurringtemplate";
option java_outer_classname = "RecurringTemplateMessagesDescriptionProto";

package avenue.financial.protobuf.recurringtemplate;

message RecurringTemplateProto{
  google.protobuf.StringValue _id = 1;
  avenue.financial.protobuf.core.MetaProto meta = 2;
  avenue.financial.protobuf.core.MiniUserProto owner = 3;
  avenue.financial.protobuf.core.EntityStatusWrapper.EntityStatus status = 4;
  avenue.financial.protobuf.core.VisibilityTypeProto visibility = 5;
  RecurringTemplateInfoProto recurring_template_info = 6;

}

message AddRecurringTemplateInfoProto{
  google.protobuf.StringValue title = 1;
  google.protobuf.StringValue start_date = 2;
  google.protobuf.StringValue end_date = 3;
  RecurringRuleTypeProto recurring_rule_type_proto = 4;
  google.protobuf.Int32Value after_count = 5;
  google.protobuf.StringValue description = 6;
}
message RecurringTemplateInfoProto{
  google.protobuf.StringValue title = 1;
  google.protobuf.StringValue start_date = 2;
  google.protobuf.StringValue end_date = 3;
  RecurringRuleTypeProto recurring_rule_type_proto = 4;
  google.protobuf.Int32Value after_count = 5;
  google.protobuf.StringValue description = 6;

}
message AddRecurringTemplateProto{

  avenue.financial.protobuf.core.MiniUserProto owner = 1;
  avenue.financial.protobuf.core.EntityStatusWrapper.EntityStatus status = 2;
  avenue.financial.protobuf.core.VisibilityTypeProto visibility = 3;
  AddRecurringTemplateInfoProto recurring_template_info = 4;


}

message UpdateRecurringTemplateProto{
  google.protobuf.StringValue _id = 1;
  avenue.financial.protobuf.core.MiniUserProto owner = 2;
  avenue.financial.protobuf.core.EntityStatusWrapper.EntityStatus status = 3;
  avenue.financial.protobuf.core.VisibilityTypeProto visibility = 4;
  AddRecurringTemplateInfoProto recurring_template_info = 5;

}


enum RecurringRuleTypeProto{
  ON = 0;
  NEVER = 1;
  AFTER = 2;

}




